Fix multi-window z-index problem
Added position: absolute to css, removed link function in
angled-windows.js in favor of compile function in order to make
draggable options and z-indexing work properly.  Added filters
obj2string

--- a/Modules/css/angled-windows.css
+++ b/Modules/css/angled-windows.css
@@ -8,6 +8,7 @@
 
 /** Window minimize and expansion transition **/
 .angled-window {
+  position: absolute;
   max-height: 1000px;
   overflow: hidden;
   webkit-transition: max-height .4s ease;
